Fix: text-overflow

--- a/css/common.css
+++ b/css/common.css
@@ -747,6 +747,19 @@ p {
   line-height: 24px;
   color: #1A202C;
   text-transform: uppercase;
+  display: inline-block;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  max-width: 40px;
+}
+@media only screen and (max-width: 991px) {
+  .list-top-match-today .list-top-match-item .left-content .club-name,
+.list-top-match-today .list-top-match-item .right-content .club-name {
+    max-width: 20px;
+    font-size: 14px;
+    line-height: 21px;
+  }
 }
 @media only screen and (max-width: 991px) {
   .list-top-match-today .list-top-match-item .right-content {
@@ -760,7 +773,7 @@ p {
   flex-grow: 1;
   flex-direction: column;
   width: 100%;
-  padding: 0px 30px;
+  padding: 0px 24px;
   align-items: center;
 }
 @media only screen and (max-width: 991px) {
@@ -790,8 +803,17 @@ p {
   font-weight: 400;
   font-size: 12px;
   line-height: 18px;
-  min-width: max-content;
   color: #718096;
+  display: inline-block;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  max-width: 94px;
+}
+@media only screen and (max-width: 991px) {
+  .list-top-match-today .list-top-match-item .middle-content .league-info .league-name {
+    max-width: 94px;
+  }
 }
 .list-top-match-today .list-top-match-item .middle-content .league-info .league-time {
   font-style: normal;
