--- a/scss/_common.scss
+++ b/scss/_common.scss
@@ -821,6 +821,17 @@ p {
 				line-height: 24px;
 				color: #1A202C;
 				text-transform: uppercase;
+			  display: inline-block;
+				white-space: nowrap;
+				overflow: hidden;
+				text-overflow: ellipsis;
+				max-width: 40px;
+
+				@include mq(max_md) {
+					max-width: 20px;
+					font-size: 14px;
+					line-height: 21px;
+				}
 			}
 		}
 
@@ -837,7 +848,7 @@ p {
 			flex-grow: 1;
 			flex-direction: column;
 			width: 100%;
-			padding: 0px 30px;
+			padding: 0px 24px;
 			align-items: center;
 
 			@include mq(max_md) {
@@ -867,8 +878,16 @@ p {
 					font-weight: 400;
 					font-size: 12px;
 					line-height: 18px;
-					min-width: max-content;
 					color: #718096;
+					display: inline-block;
+					white-space: nowrap;
+					overflow: hidden;
+					text-overflow: ellipsis;
+					max-width: 94px;
+
+					@include mq(max_md) {
+						max-width: 94px;
+					}
 				}
 
 				.league-time {
